# Easinotate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
build_tools/: build_exe.bat  build_exe.sh  easinotate.spec
easinotate/: __init__.py  __main__.py  main.py
easinotate/core/: __init__.py  annotation.py  dataset.py  dedup.py  exporter.py
easinotate/gui/: __init__.py  canvas.py  dialogs.py  duplicates_dialog.py  main_window.py  style.py
easinotate/utils/: __init__.py  image_loader.py
